# burrow-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.yaml.example  secrets.yaml.example
src/: cli.py  config.py  main.py  persistence.py
src/burrow/: __init__.py  config.py  main.py
src/burrow/devices/: __init__.py  august.py  base.py  govee.py  lifx.py  ring.py  roomba.py  tuya.py
src/burrow/mcp/: __init__.py  server.py
src/burrow/models/: __init__.py  device.py
src/burrow/presence/: __init__.py  mmwave.py
src/burrow/state/: __init__.py  (+1 more)
src/devices/: __init__.py  appletv.py  august.py  govee.py  lifx.py  manager.py  ring.py  roomba.py  roomba_cloud.py  tuya.py
src/discovery/: __init__.py  config_utils.py  lifx.py  mqtt.py  network.py  ring.py  tuya.py
src/mcp/: __init__.py  server.py  tools.py
src/mcp_server/: __init__.py  server.py  tools.py
src/models/: __init__.py  base.py  camera.py  light.py  lock.py  media_device.py  plug.py  presence.py  room.py  sensor.py  vacuum.py
src/presence/: __init__.py  mmwave.py
src/recommendation/: __init__.py  engine.py  tracker.py  tv_metadata.py
src/scheduling/: __init__.py  scheduler.py
src/services/: __init__.py  movie_query.py  ptp.py  synology.py  torrent_selector.py
src/state/: __init__.py
src/utils/: __init__.py  errors.py  health.py  rate_limit.py  retry.py
tests/: __init__.py  conftest.py  test_device_manager.py  test_downloads.py  test_handlers.py  test_models.py  test_persistence.py  test_recommendations.py  test_robustness.py  test_scheduling.py  test_utils.py
(+18 files in other folders)
