[project]
name = "burrow-mcp"
version = "0.1.0"
description = "A Python-based home automation system with MCP interface for Claude integration"
requires-python = ">=3.11"
dependencies = [
    "mcp",                    # MCP SDK
    "lifxlan",                # LIFX local control
    "tinytuya",               # Tuya local control
    "yalexs",                 # August locks
    "roombapy",               # Roomba
    "ring-doorbell",          # Ring (optional, low priority)
    "pyyaml",                 # Config
    "pydantic",               # Data validation
    "aiosqlite",              # Async state persistence
    "httpx",                  # Async HTTP for APIs
    "aiomqtt",                # MQTT for presence sensors
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
discovery = ["zeroconf"]      # Better network discovery

[project.scripts]
burrow = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "config/*.example"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
